- use new lanelet_rviz_plugin_ros instead of marker visualization - use new simulation_utils_ros_tool for publishing the NavSatFix message (for rviz_satellite plugin) and the TF to lanelet_map_center (for better rviz performance)

--- a/package.xml
+++ b/package.xml
@@ -26,7 +26,8 @@
   <depend>sim_sample_planning_ros_tool</depend>
   <depend>sim_sample_communication_ros_tool</depend>
 
+  <depend>simulation_utils_ros_tool</depend>
   <depend>object_state_array_rviz_plugin_ros</depend>
-  <depend>sim_lanelet_visualization_ros_tool</depend>
+  <depend>lanelet_rviz_plugin_ros</depend>
 
 </package>
